--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.7",
     "@mui/styles": "^5.14.7",
     "@types/victory": "^35.0.0",
+    "lottie-react": "^2.4.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-cookie": "^6.1.0",
